# simplenameserver

./: README.md
node_0/: CMakeLists.txt  server.fbs
node_0/src/: main.cpp
